# maidzenbot

./: .gitignore  Pipfile  commands.py  keep_alive.py  main.py  memes.py  pyproject.toml  requirements.txt
assets/.comments/: atack.mp4.xml  piedras.mp4.xml  suplicate.mp4.xml
classes/: Connection.py  api_command.py  bot.py  command.py  meme.py  meme_command.py  message.py
