[tool.poetry]
name = "maidzenbot-8"
version = "0.1.0"
description = ""
authors = ["maidzen <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
Flask = "^2.0.1"
Pillow = "^8.2.0"
requests = "^2.25.1"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
